--- a/styles.css
+++ b/styles.css
@@ -2,31 +2,27 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  overflow-x: hidden;
+  overflow-x:hidden;
 }
 
 body{
-/*  overflow: scroll;*/
   background-color: #c0c0c0;
   width: 1348px;
-/*  height: 100%;*/
   font-size: 16px;
 }
 
 .page{
   display: flex;
   flex-wrap:wrap;
+  width: 100%;
 }
 
 nav{
-  /*background-color: #000000;*/
-/*  height: 50px;*/
   position: absolute;
   display: flex;
   justify-content: center;
   font-family: Verdana, Geneva, sans-serif;
   width: 100%;
-/*  border: 5px solid red;*/
 }
 
 .riferimenti{
@@ -155,6 +151,7 @@ section{
 section > h2{
   position: relative;
   left: 13px;
+  margin-right: 20px;
 }
 
 #future{
