--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,19 @@ footer > h4{
 
 
 @media only screen and (min-width: 320px) and (max-width:425px){
+   nav{
+     width: 200%;
+   }
+
+  .sezioni{
+    font-size: 20px;
+  }
+
+  .sezioni > li{
+
+    margin-right: 40px;
+  }
+
   #about_me{
     width: 100%;
     position: relative;
@@ -218,6 +231,7 @@ footer > h4{
 
   #about_me > p{
     margin-right: 200px;
+    font-size: 20px;
   }
 
   .informazioni{
@@ -231,6 +245,10 @@ footer > h4{
     margin-left: -30px;
   }
 
+  .linguaggio{
+    font-size: 20px;
+  }
+
   .w3-container{
     margin-right: 170px;
   }
@@ -240,6 +258,11 @@ footer > h4{
     position: relative;
     left: 30px;
   }
+
+  .futuro{
+    font-size: 20px;
+  }
+
 
  .contenitore{
    margin-right: 200px;
@@ -319,6 +342,7 @@ footer > h4{
 
   #about_me > p{
     margin-right: 200px;
+    font-size: 19px;
   }
 
   .informazioni{
@@ -333,6 +357,10 @@ footer > h4{
     margin-left: -30px;
   }
 
+  .linguaggio{
+    font-size: 19px;
+  }
+
   .w3-container{
     margin-right: 170px;
   }
@@ -342,6 +370,10 @@ footer > h4{
     position: relative;
     left: 30px;
 
+  }
+
+  .futuro{
+    font-size: 19px;
   }
 
   .contenitore{
